# MinecraftClone

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/core/: application.cpp  application.h  event.h  eventSystem.cpp  eventSystem.h  window.cpp  window.h
src/game/: block.cpp  block.h  chunk.cpp  chunk.h  info.h
src/graphics/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  viewFrustum.cpp  viewFrustum.h
src/graphics/opengl/: vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
src/mesh/: mesh.cpp  mesh.h
src/player/: player.h
src/utility/: utility.cpp  utility.h
src/world/: world.cpp  world.h  worldGeneration.cpp  worldGeneration.h
